--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
 .vscode/*
+!.vscode/arduino.json
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
@@ -51,7 +52,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
