--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
-build
+.pio
 
-.vscode/*
-!.vscode/arduino.json
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/ipch
 
 # Local History for Visual Studio Code
 .history/
