--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:btatmega168]
+[env:ATmega2560]
 platform = atmelavr
 board = ATmega2560
 framework = arduino
