added impls for motor, safety, and util funcs

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,10 @@
 platform = atmelavr
 board = ATmega2560
 framework = arduino
+lib_deps = thomasfredericks/Bounce2@^2.71
 
 [env]
 build_flags = 
 	-D VERSION=1.2.3
 	-D DEBUG=1
 	-D BAUD=115200
-
