feat: add release and debug compile targets

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,14 +8,26 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:ATmega2560]
+[env]
 platform = atmelavr
 board = ATmega2560
 framework = arduino
-lib_deps = thomasfredericks/Bounce2@^2.71
-
-[env]
+lib_deps = 
+	thomasfredericks/Bounce2@^2.71
+	arduino-libraries/Servo@^1.1.8
 build_flags = 
 	-D VERSION=1.2.3
-	-D DEBUG=1
 	-D BAUD=115200
+
+[env:release]
+build_type = release
+build_flags = 
+	${env.build_flags}
+	-D RELEASE=1
+
+[env:debug]
+build_type = debug
+build_flags = 
+	${env.build_flags}
+	-D DEBUG=1
+debug_tool = simavr
