feat: implemented drivetrain code
1. Implemented struct PWM_Motor, which is used to store the state of the motor.
- keeping track of previous output value and delta time allows us to limit slew
- we can programmatically flip the motors

2. Implemented struct DriveTrain, which manages the motors for the drivetrain (syntax so clean!)
- does not use Crc::CrcLib::MoveHolonomic - Reimplements it so that it can interop with PWM_Motor.

3. Using new library called arduino-timer.
- allows us to schedule and manage tasks (crucial for updating PWM_Motor and limiting slew)

4. Start Serial only if macro DEBUG is defined

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = debug
+
 [env]
 platform = atmelavr
 board = ATmega2560
@@ -15,19 +18,22 @@ framework = arduino
 lib_deps = 
 	thomasfredericks/Bounce2@^2.71
 	arduino-libraries/Servo@^1.1.8
+	contrem/arduino-timer@^2.3.1
 build_flags = 
 	-D VERSION=1.2.3
-	-D BAUD=115200
+	-D BAUD=9600
+
 
 [env:release]
 build_type = release
 build_flags = 
 	${env.build_flags}
-	-D RELEASE=1
+	-D RELEASE
+
 
 [env:debug]
 build_type = debug
 build_flags = 
 	${env.build_flags}
-	-D DEBUG=1
+	-D DEBUG
 debug_tool = simavr
