feat: add cppcheck as check tool

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,11 @@ lib_deps =
 build_flags = 
 	-D VERSION=1.2.3
 	-D BAUD=9600
+check_tool = cppcheck
+check_flags = 
+	--platform=avr8
+	--enable=all	
+check_skip_packages = yes
 
 
 [env:release]
