build: change board and set c++ std as c++17

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,19 +13,25 @@ default_envs = debug, release
 
 [env]
 platform = atmelavr
-board = ATmega2560
+board = megaatmega2560
 framework = arduino
+
 lib_deps = 
 	thomasfredericks/Bounce2@^2.71
 	contrem/arduino-timer@^2.3.1
-build_flags = 
-	-D VERSION=0.0.1
-	-D BAUD=9600
+	arduino-libraries/Servo@^1.1.8
+
 check_tool = cppcheck
 check_flags = 
 	--platform=avr8
-	--enable=all	
+	--enable=all
 check_skip_packages = yes
+
+build_unflags = -std=gnu++11
+build_flags = 
+	-D VERSION=0.0.1
+	-D BAUD=9600
+	-std=c++17
 
 [env:release]
 build_type = release
