--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 .pio
 
-.vscode/.browse.c_cpp.db*
-.vscode/c_cpp_properties.json
-.vscode/launch.json
-.vscode/ipch
+.vscode/*
+!.vscode/code-snippets
+!.vscode/extensions.json
 
 compile_commands.json
 
