--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 .pio
 
 .vscode/*
-!.vscode/code-snippets
+!.vscode/settings.json
+!.vscode/tasks.json
 !.vscode/extensions.json
-
-compile_commands.json
+!.vscode/*.code-snippets
 
 # Local History for Visual Studio Code
 .history/
