build: base BAUD macro on monitor_speed

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,23 +15,21 @@ default_envs = release
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-
+monitor_speed = 9600
 lib_deps = 
 	thomasfredericks/Bounce2@^2.71
 	contrem/arduino-timer@^2.3.1
 	arduino-libraries/Servo@^1.1.8
-
+build_unflags = -std=gnu++11
+build_flags = 
+	-D BAUD=${env.monitor_speed}
+	-D VERSION=0.0.1
+	-std=c++17
 check_tool = cppcheck
 check_flags = 
 	--platform=avr8
 	--enable=all
 check_skip_packages = yes
-
-build_unflags = -std=gnu++11
-build_flags = 
-	-D VERSION=0.0.1
-	-D BAUD=9600
-	-std=c++17
 
 [env:release]
 build_type = release
