build: add clang-tidy as check tool on build and modified check patterns

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,11 +14,11 @@ build_flags =
 	-D BAUD=${env.monitor_speed}
 	-D VERSION=0.0.1
 	-std=c++17
-check_tool = cppcheck
-check_flags = 
-	--platform=avr8
-	--enable=all
+check_tool = cppcheck, clangtidy
 check_skip_packages = yes
+check_patterns =
+	include
+	src
 
 [env:release]
 build_type = release
