build: include toolchain in compile_commands.json to correctly resolve includes in clangd

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,7 @@ check_skip_packages = yes
 check_patterns =
 	include
 	src
+extra_scripts = pre:scripts/export_toolchain.py
 
 [env:release]
 build_type = release
