build: change version from c++17 to gnu++14

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ build_unflags = -std=gnu++11
 build_flags =
 	-D BAUD=${env.monitor_speed}
 	-D VERSION=0.0.1
-	-std=c++17
+	-std=gnu++14
 check_tool = cppcheck, clangtidy
 check_skip_packages = yes
 check_patterns =
