build: add etl dependency

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,12 +7,13 @@ board = megaatmega2560
 framework = arduino
 monitor_speed = 9600
 lib_deps =
-	contrem/arduino-timer@^2.3.1
 	arduino-libraries/Servo@^1.1.8
+	etlcpp/Embedded Template Library@^20.35.8
 build_unflags = -std=gnu++11
 build_flags =
 	-D BAUD=${env.monitor_speed}
 	-D VERSION=0.0.1
+	-D ETL_NO_STL
 	-std=gnu++14
 check_tool = cppcheck, clangtidy
 check_skip_packages = yes
