chore: remove cppcheck as check tool

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,26 +1,25 @@
 [platformio]
 default_envs = release
 
-[env]
+[env] ; common config
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
 monitor_speed = 9600
 lib_deps =
-	arduino-libraries/Servo@^1.1.8
-	etlcpp/Embedded Template Library@^20.35.8
-build_unflags = -std=gnu++11
+	arduino-libraries/Servo@^1.1.8 ; CrcLib required dependency
+	etlcpp/Embedded Template Library@^20.35.8 
+build_unflags = -std=gnu++11 
 build_flags =
 	-D BAUD=${env.monitor_speed}
 	-D VERSION=0.0.1
-	-D ETL_NO_STL
+	-D ETL_NO_STL ; tell etl to not rely on stl
 	-std=gnu++14
-check_tool = cppcheck, clangtidy
+check_tool = clangtidy
+check_flags = 
+	clangtidy: --config-file=.clang-tidy
 check_skip_packages = yes
-check_patterns =
-	include
-	src
-extra_scripts = pre:scripts/export_toolchain.py
+extra_scripts = pre:scripts/export_toolchain.py ; needed for clangd to resolve all includes
 
 [env:release]
 build_type = release
