--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,7 @@ framework = arduino
 monitor_speed = 9600
 lib_deps =
 	arduino-libraries/Servo@^1.1.8 ; CrcLib required dependency
+	mathertel/RotaryEncoder@^1.5.3
 	etlcpp/Embedded Template Library@^20.35.8 
 build_unflags = -std=gnu++11 
 build_flags =
@@ -19,7 +20,7 @@ check_tool = clangtidy
 check_flags = 
 	clangtidy: --config-file=.clang-tidy
 check_skip_packages = yes
-extra_scripts = pre:scripts/export_toolchain.py ; needed for clangd to resolve all includes
+extra_scripts = pre:export_toolchain.py ; needed for clangd to resolve all includes
 
 [env:release]
 build_type = release
