feb 11, 2023, finalize pins and controller, +more

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,7 @@ monitor_speed = 9600
 lib_deps =
 	arduino-libraries/Servo@^1.1.8 ; CrcLib required dependency
 	etlcpp/Embedded Template Library@^20.35.8 
+	paulstoffregen/Encoder@^1.4.2
 build_unflags = -std=gnu++11 
 build_flags =
 	-D BAUD=${env.monitor_speed}
